# dts

./: README.md  dts.yaml.example  go.mod  go.sum  main.go
.github/workflows/: autotest_prs.yml  format.yml  irods.yml
auth/: auth.go  authenticator.go  authenticator_test.go  kbase_auth_server.go  kbase_auth_server_test.go
config/: config.go  config_test.go  database_config.go  errors.go
credit/: metadata.go
databases/: databases.go  databases_test.go  errors.go  errors_test.go  http_test.go
databases/jdp/: database.go  database_test.go
databases/kbase/: database.go  database_test.go  user_federation.go  user_federation_test.go
databases/nmdc/: database.go  database_test.go  errors.go
databases/s3/: database.go  database_test.go
deployment/: Dockerfile  dts.yaml
deployment/cyverse-irods-proxy/: CMakeLists.txt  README.md  bucket-mapping.json  config.json  user-mapping.json
deployment/cyverse-irods-proxy/plugins/: README.md  bucket_mapper.c  bucket_mapping.h  plugin_tools.c  plugin_tools.h  subst_env_var.c  subst_env_var.h  user_mapper.c  user_mapping.h
dtstest/: dtstest.go
endpoints/: endpoints.go  errors.go
endpoints/globus/: endpoint.go  endpoint_test.go
endpoints/irods/: endpoint.go
endpoints/local/: endpoint.go  endpoint_test.go
endpoints/s3/: endpoint.go  endpoint_test.go
etc/aws_client/: README.md  go.mod  go.sum  main.go
etc/irods/: Dockerfile  Dockerfile.irods_s3_api  README.md  docker-compose.yml  init-db.sql  main.py  provider-config.json  pyproject.toml  s3-proxy-config.json  start.sh  test_client.py
etc/nasa_s3/: modis.py
integration/: README.md  integration_test.go  s3_test.go
integration/fixtures/: test-config.yaml
integration/irods/: README.md  integration_test.go  s3_test.go
integration/minio/: integration_test.go
integration_irods/: .gitignore  README.md  integration_test.go
journal/: journal.go  journal_test.go
services/: prototype.go  prototype_test.go  transfer_service.go  version.go
tasks/: subtask.go  task.go  tasks.go  tasks_test.go
transfers/: README.md  clock.go  dispatcher.go  dispatcher_test.go  errors.go  manifestor.go  manifestor_test.go  messages.go  mover.go  mover_test.go  stager.go  stager_test.go  store.go  store_test.go  transfers.go  transfers_test.go
(+141 files in other folders)
